# os-tui

./: .gitignore  .pre-commit-config.yaml  PRD.md  WORKPLAN.md  mypy.ini  pyproject.toml
.github/workflows/: ci.yml
os_tui/: __init__.py
os_tui.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: test_sample.py
